--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="test.hong8yung.com.candle">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
     <application android:networkSecurityConfig="@xml/network_security_config"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -19,6 +20,7 @@
         </activity>
         <activity android:name=".SecondActivity"></activity>
         <activity android:name=".HomeActivity"></activity>
+        <service android:name=".MediaPlayerService"/>
     </application>
 
 </manifest>
